--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.4",
     "nodemon": "^2.0.22",
